--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "validator": "^13.6.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "craco start",
