--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/material": "^5.0.3",
     "cra-template": "1.1.2",
     "formik": "^2.2.9",
+    "nanoid": "^3.1.30",
     "npm": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
